# Palisade

./: .dockerignore  .gitignore  CLAUDE.md  IMPLEMENTATION.md  README.md
.github/workflows/: guard-ci.yml  guard-deploy.yml  prompt-guard-ci.yml  prompt-guard-deploy.yml  tool-guard-ci.yml  tool-guard-deploy.yml  triage-guard-deploy.yml
guard/: Makefile  go.mod  go.sum
guard/cmd/guard-server/: main.go
guard/deploy/: Dockerfile  cdk.context.json  package.json  pnpm-lock.yaml
guard/deploy/lib/: guard-stack.ts
guard/internal/api/: check.go  events.go  middleware.go  policies.go  projects.go  router.go  types.go
guard/internal/auth/: auth.go  auth_test.go  cache.go  cache_test.go  postgres_auth.go  postgres_auth_test.go
guard/internal/chread/: events.go
guard/internal/engine/: aggregator.go  aggregator_test.go  defaults.go  detector.go  engine.go  policy.go  policy_test.go  (+1 more)
guard/migrations/: 000001_create_security_events.up.sql
guard/scripts/: create_docker.sh  test_requests.sh
services/prompt_guard/: Makefile  pyproject.toml
services/prompt_guard/deploy/: Dockerfile  Dockerfile.sidecar  package.json  pnpm-lock.yaml
services/prompt_guard/deploy/lib/: prompt-guard-stack.ts
services/prompt_guard/scripts/: create_docker.sh  create_docker_sidecar.sh  export_onnx.py
services/prompt_guard/src/prompt_guard/: config.py  model.py  onnx_model.py  server.py  service.py
services/prompt_guard/tests/: conftest.py  test_onnx_inference.py  test_service.py
services/tool_guard/: Makefile  go.mod  go.sum
services/triage-guard/: .gitignore  requirements.txt
(+83 files in other folders)
