[project]
name = "prompt-guard"
version = "0.1.0"
description = "GPU-backed ML classifier for prompt injection detection"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.29.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["src/prompt_guard/gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/prompt_guard/service.py" = ["N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
